feat: add basic wa notifier and daily weathers notifier
