# main.go
@@ -6,7 +6,7 @@ import (
 
 	"github.com/gofiber/template/html/v2"
 	_ "github.com/joho/godotenv/autoload"
-	"github.com/momokii/go-wa-notifier/docs"
+	"github.com/momokii/go-llmbridge/pkg/openai"
 	_ "github.com/momokii/go-wa-notifier/docs" // docs is generated by Swag CLI, you have to import it.
 
 	"github.com/gofiber/fiber/v2"
@@ -30,27 +30,44 @@ import (
 
 // @host      localhost:3004
 // @BasePath  /api
-// @schemes   https
+// @schemes   http
 
 // @securityDefinitions.basic  BasicAuth
 
 // @externalDocs.description  OpenAPI
 // @externalDocs.url          https://swagger.io/resources/open-api/
 func main() {
-	// programmatically set swagger info
-	docs.SwaggerInfo.Schemes = []string{"http", "https"}
 
-	// * testing for using API news
 	DEVMODE := os.Getenv("APP_ENV")
 	PORT := os.Getenv("PORT")
+
+	// openai client
+	openaiClient, err := openai.New(
+		os.Getenv("OPENAI_API_KEY"),
+		"",
+		"",
+		openai.WithModel(os.Getenv("OPENAI_MODEL_NAME")),
+	)
+	if err != nil {
+		log.Println("Error creating OpenAI client: ", err)
+		return
+
+	} else {
+		log.Println("OpenAI client created")
+	}
 
 	news_api_key := os.Getenv("NEWS_API_KEY")
 	if news_api_key == "" {
 		panic("API key is required")
 	}
 
+	openweather_api_key := os.Getenv("OPEN_WEATHER_API_KEY")
+	if openweather_api_key == "" {
+		panic("API key is required")
+	}
+
 	// initiate handler
-	newsHandler, err := handlers.NewNewsHandler(news_api_key)
+	whatsAppHandler, err := handlers.NewWhatsappHandler(news_api_key, openweather_api_key, openaiClient)
 	if err != nil {
 		panic(err.Error())
 	}
@@ -82,9 +99,11 @@ func main() {
 	}
 	app.Static("/web", "./web")
 
-	api.Get("/wa/status", newsHandler.WAStatus)
-	api.Post("/news/wa", newsHandler.SendNewsAPIWhatsapp)
-	api.Post("/wa/logout", newsHandler.WhatsAppLogout)
+	api.Get("/wa/status", whatsAppHandler.WAStatus)
+	api.Post("/wa/news", whatsAppHandler.SendNewsAPIWhatsapp)
+	api.Post("/wa/messages", whatsAppHandler.SendMessages)
+	api.Post("/wa/weathers", whatsAppHandler.SendWeatherAPIWhatsapp)
+	api.Post("/wa/logout", whatsAppHandler.WhatsAppLogout)
 
 	app.Get("/", func(c *fiber.Ctx) error {
 		return c.Render("status-wa", fiber.Map{
